GTK4/Package_Tools/include-C_5.6.9/gtk/in_Arbeit/fertig/gtkwidget.h

#define GTK_WIDGET_CLASS(klass)           (G_TYPE_CHECK_CLASS_CAST ((klass), GTK_TYPE_WIDGET, GtkWidgetClass))
typedef struct _GtkWidgetClass         GtkWidgetClass;
typedef gboolean (*GtkTickCallback) (GtkWidget     *widget,
                                     GdkFrameClock *frame_clock,
                                     gpointer       user_data);
struct _GtkWidgetClass
{
  GInitiallyUnownedClass parent_class;
  void (* show)                (GtkWidget        *widget);
  void (* hide)                (GtkWidget        *widget);
  void (* map)                 (GtkWidget        *widget);
  void (* unmap)               (GtkWidget        *widget);
  void (* realize)             (GtkWidget        *widget);
  void (* unrealize)           (GtkWidget        *widget);
  void (* root)                (GtkWidget        *widget);
  void (* unroot)              (GtkWidget        *widget);
  void (* size_allocate)       (GtkWidget           *widget,
                                int                  width,
                                int                  height,
                                int                  baseline);
  void (* state_flags_changed) (GtkWidget        *widget,
                                GtkStateFlags     previous_state_flags);
  void (* direction_changed)   (GtkWidget        *widget,
                                GtkTextDirection  previous_direction);
  GtkSizeRequestMode (* get_request_mode)               (GtkWidget      *widget);
  void              (* measure) (GtkWidget      *widget,
                                 GtkOrientation  orientation,
                                 int             for_size,
                                 int            *minimum,
                                 int            *natural,
                                 int            *minimum_baseline,
                                 int            *natural_baseline);
  gboolean (* mnemonic_activate)        (GtkWidget           *widget,
                                         gboolean             group_cycling);
  gboolean (* grab_focus)               (GtkWidget           *widget);
  gboolean (* focus)                    (GtkWidget           *widget,
                                         GtkDirectionType     direction);
  void     (* set_focus_child)          (GtkWidget           *widget,
                                         GtkWidget           *child);
  void     (* move_focus)               (GtkWidget           *widget,
                                         GtkDirectionType     direction);
  gboolean (* keynav_failed)            (GtkWidget           *widget,
                                         GtkDirectionType     direction);
  gboolean     (* query_tooltip)      (GtkWidget  *widget,
                                       int         x,
                                       int         y,
                                       gboolean    keyboard_tooltip,
                                       GtkTooltip *tooltip);
  void         (* compute_expand)     (GtkWidget  *widget,
                                       gboolean   *hexpand_p,
                                       gboolean   *vexpand_p);
  void         (* css_changed)                 (GtkWidget            *widget,
                                                GtkCssStyleChange    *change);
  void         (* system_setting_changed)      (GtkWidget            *widget,
                                                GtkSystemSetting      settings);
  void         (* snapshot)                    (GtkWidget            *widget,
                                                GtkSnapshot          *snapshot);
  gboolean     (* contains)                    (GtkWidget *widget,
                                                double     x,
                                                double     y);
  GtkWidgetClassPrivate *priv;
  gpointer padding[8];
};
gboolean     gtk_widget_translate_coordinates (GtkWidget  *src_widget,
                                               GtkWidget  *dest_widget,
                                               double      src_x,
                                               double      src_y,
                                               double     *dest_x,
                                               double     *dest_y);
gboolean     gtk_widget_contains              (GtkWidget  *widget,
                                               double      x,
                                               double      y);
GtkWidget *  gtk_widget_pick                  (GtkWidget   *widget,
                                               double       x,
                                               double       y,
                                               GtkPickFlags flags);
void         gtk_widget_add_controller        (GtkWidget          *widget,
                                               GtkEventController *controller);
void         gtk_widget_remove_controller     (GtkWidget          *widget,
                                               GtkEventController *controller);
PangoContext *gtk_widget_create_pango_context (GtkWidget   *widget);
PangoContext *gtk_widget_get_pango_context    (GtkWidget   *widget);
void gtk_widget_set_font_options (GtkWidget                  *widget,
                                  const cairo_font_options_t *options);
const cairo_font_options_t *gtk_widget_get_font_options (GtkWidget *widget);
PangoLayout  *gtk_widget_create_pango_layout  (GtkWidget   *widget,
                                               const char *text);
void             gtk_widget_set_direction         (GtkWidget        *widget,
                                                   GtkTextDirection  dir);
GtkTextDirection gtk_widget_get_direction         (GtkWidget        *widget);
void             gtk_widget_set_default_direction (GtkTextDirection  dir);
GtkTextDirection gtk_widget_get_default_direction (void);
void                    gtk_widget_set_cursor                   (GtkWidget              *widget,
                                                                 GdkCursor              *cursor);
void                    gtk_widget_set_cursor_from_name         (GtkWidget              *widget,
                                                                 const char             *name);
GdkCursor *             gtk_widget_get_cursor                   (GtkWidget              *widget);
GList* gtk_widget_list_mnemonic_labels  (GtkWidget *widget);
void   gtk_widget_add_mnemonic_label    (GtkWidget *widget,
                                         GtkWidget *label);
void   gtk_widget_remove_mnemonic_label (GtkWidget *widget,
                                         GtkWidget *label);
void            gtk_widget_trigger_tooltip_query        (GtkWidget   *widget);
void            gtk_widget_set_tooltip_text             (GtkWidget   *widget,
                                                         const char  *text);
const char *    gtk_widget_get_tooltip_text             (GtkWidget   *widget);
void            gtk_widget_set_tooltip_markup           (GtkWidget   *widget,
                                                         const char  *markup);
const char *    gtk_widget_get_tooltip_markup           (GtkWidget   *widget);
void            gtk_widget_set_has_tooltip              (GtkWidget   *widget,
                                                         gboolean     has_tooltip);
gboolean        gtk_widget_get_has_tooltip              (GtkWidget   *widget);
GType           gtk_requisition_get_type (void) ;
GtkRequisition *gtk_requisition_new      (void) ;
GtkRequisition *gtk_requisition_copy     (const GtkRequisition *requisition);
void            gtk_requisition_free     (GtkRequisition       *requisition);
gboolean     gtk_widget_in_destruction (GtkWidget *widget);
GtkStyleContext * gtk_widget_get_style_context (GtkWidget *widget);
void              gtk_widget_class_set_css_name (GtkWidgetClass *widget_class,
                                                 const char     *name);
const char *      gtk_widget_class_get_css_name (GtkWidgetClass *widget_class);
guint gtk_widget_add_tick_callback (GtkWidget       *widget,
                                    GtkTickCallback  callback,
                                    gpointer         user_data,
                                    GDestroyNotify   notify);
void gtk_widget_remove_tick_callback (GtkWidget       *widget,
                                      guint            id);
void    gtk_widget_init_template                        (GtkWidget             *widget);
GObject *gtk_widget_get_template_child                  (GtkWidget             *widget,
                                                         GType                  widget_type,
                                                         const char            *name);
void    gtk_widget_class_set_template                   (GtkWidgetClass        *widget_class,
                                                         GBytes                *template_bytes);
void    gtk_widget_class_set_template_from_resource     (GtkWidgetClass        *widget_class,
                                                         const char            *resource_name);
void    gtk_widget_class_bind_template_callback_full    (GtkWidgetClass        *widget_class,
                                                         const char            *callback_name,
                                                         GCallback              callback_symbol);
void    gtk_widget_class_set_template_scope             (GtkWidgetClass        *widget_class,
                                                         GtkBuilderScope       *scope);
void    gtk_widget_class_bind_template_child_full       (GtkWidgetClass        *widget_class,
                                                         const char            *name,
                                                         gboolean               internal_child,
                                                         gssize                 struct_offset);
void                    gtk_widget_insert_action_group  (GtkWidget    *widget,
                                                         const char   *name,
                                                         GActionGroup *group);
gboolean                gtk_widget_activate_action      (GtkWidget  *widget,
                                                         const char *name,
                                                         const char *format_string,
                                                         ...);
gboolean                gtk_widget_activate_action_variant (GtkWidget  *widget,
                                                            const char *name,
                                                            GVariant   *args);
void                    gtk_widget_activate_default     (GtkWidget *widget);
void                    gtk_widget_set_font_map         (GtkWidget             *widget,
                                                         PangoFontMap          *font_map);
PangoFontMap *          gtk_widget_get_font_map         (GtkWidget             *widget);
GtkWidget *             gtk_widget_get_first_child      (GtkWidget *widget);
GtkWidget *             gtk_widget_get_last_child       (GtkWidget *widget);
GtkWidget *             gtk_widget_get_next_sibling     (GtkWidget *widget);
GtkWidget *             gtk_widget_get_prev_sibling     (GtkWidget *widget);
GListModel *            gtk_widget_observe_children     (GtkWidget *widget);
GListModel *            gtk_widget_observe_controllers  (GtkWidget *widget);
void                    gtk_widget_insert_after         (GtkWidget *widget,
                                                         GtkWidget *parent,
                                                         GtkWidget *previous_sibling);
void                    gtk_widget_insert_before        (GtkWidget *widget,
                                                         GtkWidget *parent,
                                                         GtkWidget *next_sibling);
void                    gtk_widget_set_focus_child      (GtkWidget *widget,
                                                         GtkWidget *child);
GtkWidget *             gtk_widget_get_focus_child      (GtkWidget *widget);
void                    gtk_widget_snapshot_child       (GtkWidget   *widget,
                                                         GtkWidget   *child,
                                                         GtkSnapshot *snapshot);
gboolean                gtk_widget_should_layout        (GtkWidget   *widget);
const char *            gtk_widget_get_css_name         (GtkWidget   *self) ;
void                    gtk_widget_add_css_class        (GtkWidget   *widget,
                                                         const char  *css_class);