GTK4/package/gtkwidget.pas

function gtk_widget_translate_coordinates(src_widget:PGtkWidget; dest_widget:PGtkWidget; src_x:Tdouble; src_y:Tdouble; dest_x:Pdouble; 
           dest_y:Pdouble):Tgboolean;cdecl;external gtklib;
function gtk_widget_contains(widget:PGtkWidget; x:Tdouble; y:Tdouble):Tgboolean;cdecl;external gtklib;
function gtk_widget_pick(widget:PGtkWidget; x:Tdouble; y:Tdouble; flags:TGtkPickFlags):PGtkWidget;cdecl;external gtklib;
procedure gtk_widget_add_controller(widget:PGtkWidget; controller:PGtkEventController);cdecl;external gtklib;
procedure gtk_widget_remove_controller(widget:PGtkWidget; controller:PGtkEventController);cdecl;external gtklib;
function gtk_widget_create_pango_context(widget:PGtkWidget):PPangoContext;cdecl;external gtklib;
function gtk_widget_get_pango_context(widget:PGtkWidget):PPangoContext;cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_set_font_options(widget:PGtkWidget; options:Pcairo_font_options_t);cdecl;external gtklib;
(* Const before type ignored *)
function gtk_widget_get_font_options(widget:PGtkWidget):Pcairo_font_options_t;cdecl;external gtklib;
(* Const before type ignored *)
function gtk_widget_create_pango_layout(widget:PGtkWidget; text:Pchar):PPangoLayout;cdecl;external gtklib;
{ Functions for setting directionality for widgets  }
procedure gtk_widget_set_direction(widget:PGtkWidget; dir:TGtkTextDirection);cdecl;external gtklib;
function gtk_widget_get_direction(widget:PGtkWidget):TGtkTextDirection;cdecl;external gtklib;
procedure gtk_widget_set_default_direction(dir:TGtkTextDirection);cdecl;external gtklib;
function gtk_widget_get_default_direction:TGtkTextDirection;cdecl;external gtklib;
procedure gtk_widget_set_cursor(widget:PGtkWidget; cursor:PGdkCursor);cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_set_cursor_from_name(widget:PGtkWidget; name:Pchar);cdecl;external gtklib;
function gtk_widget_get_cursor(widget:PGtkWidget):PGdkCursor;cdecl;external gtklib;
function gtk_widget_list_mnemonic_labels(widget:PGtkWidget):PGList;cdecl;external gtklib;
procedure gtk_widget_add_mnemonic_label(widget:PGtkWidget; _label:PGtkWidget);cdecl;external gtklib;
procedure gtk_widget_remove_mnemonic_label(widget:PGtkWidget; _label:PGtkWidget);cdecl;external gtklib;
procedure gtk_widget_trigger_tooltip_query(widget:PGtkWidget);cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_set_tooltip_text(widget:PGtkWidget; text:Pchar);cdecl;external gtklib;
(* Const before type ignored *)
function gtk_widget_get_tooltip_text(widget:PGtkWidget):Pchar;cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_set_tooltip_markup(widget:PGtkWidget; markup:Pchar);cdecl;external gtklib;
(* Const before type ignored *)
function gtk_widget_get_tooltip_markup(widget:PGtkWidget):Pchar;cdecl;external gtklib;
procedure gtk_widget_set_has_tooltip(widget:PGtkWidget; has_tooltip:Tgboolean);cdecl;external gtklib;
function gtk_widget_get_has_tooltip(widget:PGtkWidget):Tgboolean;cdecl;external gtklib;
function gtk_requisition_get_type:TGType;cdecl;external gtklib;
function gtk_requisition_new:PGtkRequisition;cdecl;external gtklib;
(* Const before type ignored *)
function gtk_requisition_copy(requisition:PGtkRequisition):PGtkRequisition;cdecl;external gtklib;
procedure gtk_requisition_free(requisition:PGtkRequisition);cdecl;external gtklib;
function gtk_widget_in_destruction(widget:PGtkWidget):Tgboolean;cdecl;external gtklib;
function gtk_widget_get_style_context(widget:PGtkWidget):PGtkStyleContext;cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_class_set_css_name(widget_class:PGtkWidgetClass; name:Pchar);cdecl;external gtklib;
(* Const before type ignored *)
function gtk_widget_class_get_css_name(widget_class:PGtkWidgetClass):Pchar;cdecl;external gtklib;
function gtk_widget_add_tick_callback(widget:PGtkWidget; callback:TGtkTickCallback; user_data:Tgpointer; notify:TGDestroyNotify):Tguint;cdecl;external gtklib;
procedure gtk_widget_remove_tick_callback(widget:PGtkWidget; id:Tguint);cdecl;external gtklib;
{*
 * gtk_widget_class_bind_template_callback:
 * @widget_class: a `GtkWidgetClass`
 * @callback: the callback symbol
 *
 * Binds a callback function defined in a template to the @widget_class.
 *
 * This macro is a convenience wrapper around the
 * gtk_widget_class_bind_template_callback_full() function. It is not
 * supported after gtk_widget_class_set_template_scope() has been used
 * on @widget_class.
  }
{#define gtk_widget_class_bind_template_callback(widget_class, callback) \ }
{  gtk_widget_class_bind_template_callback_full (GTK_WIDGET_CLASS (widget_class), \ }
{                                                #callback, \ }
{                                                G_CALLBACK (callback)) }
{*
 * gtk_widget_class_bind_template_child:
 * @widget_class: a `GtkWidgetClass`
 * @TypeName: the type name of this widget
 * @member_name: name of the instance member in the instance struct for @data_type
 *
 * Binds a child widget defined in a template to the @widget_class.
 *
 * This macro is a convenience wrapper around the
 * gtk_widget_class_bind_template_child_full() function.
 *
 * This macro will use the offset of the @member_name inside the @TypeName
 * instance structure.
  }
{#define gtk_widget_class_bind_template_child(widget_class, TypeName, member_name) \ }
{  gtk_widget_class_bind_template_child_full (widget_class, \ }
{                                             #member_name, \ }
{                                             FALSE, \ }
{                                             G_STRUCT_OFFSET (TypeName, member_name)) }
{*
 * gtk_widget_class_bind_template_child_internal:
 * @widget_class: a `GtkWidgetClass`
 * @TypeName: the type name, in CamelCase
 * @member_name: name of the instance member in the instance struct for @data_type
 *
 * Binds a child widget defined in a template to the @widget_class, and
 * also makes it available as an internal child in GtkBuilder, under the
 * name @member_name.
 *
 * This macro is a convenience wrapper around the
 * gtk_widget_class_bind_template_child_full() function.
 *
 * This macro will use the offset of the @member_name inside the @TypeName
 * instance structure.
  }
{#define gtk_widget_class_bind_template_child_internal(widget_class, TypeName, member_name) \ }
{  gtk_widget_class_bind_template_child_full (widget_class, \ }
{                                             #member_name, \ }
{                                             TRUE, \ }
{                                             G_STRUCT_OFFSET (TypeName, member_name)) }
{*
 * gtk_widget_class_bind_template_child_private:
 * @widget_class: a `GtkWidgetClass`
 * @TypeName: the type name of this widget
 * @member_name: name of the instance private member in the private struct for @data_type
 *
 * Binds a child widget defined in a template to the @widget_class.
 *
 * This macro is a convenience wrapper around the
 * gtk_widget_class_bind_template_child_full() function.
 *
 * This macro will use the offset of the @member_name inside the @TypeName
 * private data structure (it uses G_PRIVATE_OFFSET(), so the private struct
 * must be added with G_ADD_PRIVATE()).
  }
{#define gtk_widget_class_bind_template_child_private(widget_class, TypeName, member_name) \ }
{  gtk_widget_class_bind_template_child_full (widget_class, \ }
{                                             #member_name, \ }
{                                             FALSE, \ }
{                                             G_PRIVATE_OFFSET (TypeName, member_name)) }
{*
 * gtk_widget_class_bind_template_child_internal_private:
 * @widget_class: a `GtkWidgetClass`
 * @TypeName: the type name, in CamelCase
 * @member_name: name of the instance private member on the private struct for @data_type
 *
 * Binds a child widget defined in a template to the @widget_class, and
 * also makes it available as an internal child in GtkBuilder, under the
 * name @member_name.
 *
 * This macro is a convenience wrapper around the
 * gtk_widget_class_bind_template_child_full() function.
 *
 * This macro will use the offset of the @member_name inside the @TypeName
 * private data structure.
  }
{#define gtk_widget_class_bind_template_child_internal_private(widget_class, TypeName, member_name) \ }
{  gtk_widget_class_bind_template_child_full (widget_class, \ }
{                                             #member_name, \ }
{                                             TRUE, \ }
{                                             G_PRIVATE_OFFSET (TypeName, member_name)) }
procedure gtk_widget_init_template(widget:PGtkWidget);cdecl;external gtklib;
(* Const before type ignored *)
function gtk_widget_get_template_child(widget:PGtkWidget; widget_type:TGType; name:Pchar):PGObject;cdecl;external gtklib;
procedure gtk_widget_class_set_template(widget_class:PGtkWidgetClass; template_bytes:PGBytes);cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_class_set_template_from_resource(widget_class:PGtkWidgetClass; resource_name:Pchar);cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_class_bind_template_callback_full(widget_class:PGtkWidgetClass; callback_name:Pchar; callback_symbol:TGCallback);cdecl;external gtklib;
procedure gtk_widget_class_set_template_scope(widget_class:PGtkWidgetClass; scope:PGtkBuilderScope);cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_class_bind_template_child_full(widget_class:PGtkWidgetClass; name:Pchar; internal_child:Tgboolean; struct_offset:Tgssize);cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_insert_action_group(widget:PGtkWidget; name:Pchar; group:PGActionGroup);cdecl;external gtklib;
(* Const before type ignored *)
(* Const before type ignored *)
function gtk_widget_activate_action(widget:PGtkWidget; name:Pchar; format_string:Pchar; args:array of const):Tgboolean;cdecl;external gtklib;
function gtk_widget_activate_action(widget:PGtkWidget; name:Pchar; format_string:Pchar):Tgboolean;cdecl;external gtklib;
(* Const before type ignored *)
function gtk_widget_activate_action_variant(widget:PGtkWidget; name:Pchar; args:PGVariant):Tgboolean;cdecl;external gtklib;
procedure gtk_widget_activate_default(widget:PGtkWidget);cdecl;external gtklib;
procedure gtk_widget_set_font_map(widget:PGtkWidget; font_map:PPangoFontMap);cdecl;external gtklib;
function gtk_widget_get_font_map(widget:PGtkWidget):PPangoFontMap;cdecl;external gtklib;
function gtk_widget_get_first_child(widget:PGtkWidget):PGtkWidget;cdecl;external gtklib;
function gtk_widget_get_last_child(widget:PGtkWidget):PGtkWidget;cdecl;external gtklib;
function gtk_widget_get_next_sibling(widget:PGtkWidget):PGtkWidget;cdecl;external gtklib;
function gtk_widget_get_prev_sibling(widget:PGtkWidget):PGtkWidget;cdecl;external gtklib;
function gtk_widget_observe_children(widget:PGtkWidget):PGListModel;cdecl;external gtklib;
function gtk_widget_observe_controllers(widget:PGtkWidget):PGListModel;cdecl;external gtklib;
procedure gtk_widget_insert_after(widget:PGtkWidget; parent:PGtkWidget; previous_sibling:PGtkWidget);cdecl;external gtklib;
procedure gtk_widget_insert_before(widget:PGtkWidget; parent:PGtkWidget; next_sibling:PGtkWidget);cdecl;external gtklib;
procedure gtk_widget_set_focus_child(widget:PGtkWidget; child:PGtkWidget);cdecl;external gtklib;
function gtk_widget_get_focus_child(widget:PGtkWidget):PGtkWidget;cdecl;external gtklib;
procedure gtk_widget_snapshot_child(widget:PGtkWidget; child:PGtkWidget; snapshot:PGtkSnapshot);cdecl;external gtklib;
function gtk_widget_should_layout(widget:PGtkWidget):Tgboolean;cdecl;external gtklib;
(* Const before type ignored *)
function gtk_widget_get_css_name(self:PGtkWidget):Pchar;cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_add_css_class(widget:PGtkWidget; css_class:Pchar);cdecl;external gtklib;
